Rider plugins: fix build searchable options
GitOrigin-RevId: 02667007f664b40ca4f8543604cb9af48a931149